--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ mypy = "^1.1.1"
 no-implicit-optional = "^1.3"
 ruff = "^0.0.251"
 pdoc = "^14.6.0"
+pytest = "^8.3.4"
 
 [tool.mypy]
 disable_error_code = ["import", "attr-defined", "no-untyped-call"]
@@ -98,7 +99,6 @@ ignore = [
     "ANN201",
     "ANN202",
     "ANN401",
-    "C901",
     "D100",
     "D101",
     "D102",
