--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,43 +1,5 @@
 {
-    "python.defaultInterpreterPath": "./venv/bin/python",
-    "python.analysis.diagnosticSeverityOverrides": {
-        // none
-        "reportMatchNotExhaustive": "none",
-        "reportUnboundVariable": "none",
-        "reportSelfClsParameterName": "none",
-        "reportMissingParameterType": "none",
-        "reportUntypedFunctionDecorator": "none",
-        "reportOptionalCall": "none",
-        "reportMissingTypeArgument": "none",
-        "reportUnusedVariable": "none",
-        "reportUntypedBaseClass": "none",
-        "reportUnknownLambdaType": "none",
-        "reportUnknownVariableType": "none",
-        "reportMissingTypeStubs": "none",
-        "reportUnknownArgumentType": "none",
-        "reportGeneralTypeIssues": "none",
-        "reportUnknownMemberType": "none",
-        "reportUnknownParameterType": "none",
-        "reportOptionalSubscript": "none",
-        "reportOptionalMemberAccess": "none",
-        "reportFunctionMemberAccess": "none",
-        "reportInvalidStringEscapeSequence": "none",
-        "reportMissingImports": "none",
-        "reportConstantRedefinition": "none",
-        "reportOptionalIterable": "none",
-        "reportUnnecessaryIsInstance": "none",
-        "reportUnnecessaryComparison": "none",
-        "reportUnusedFunction": "none",
-        "reportUntypedClassDecorator": "none",
-        "reportPrivateImportUsage": "none",
-        "reportPrivateUsage": "none",
-        "ncereportMissingModuleSource": "none",
-        "reportUnusedImport": "none",
-        "reportUnusedExpression": "none",
-        "reportCallIssue": "none",
-        "reportAttributeAccessIssue": "none",
-        // warning
-        // error
-        "reportMissingParameterDoc": "error"
-    },
+    "python.defaultInterpreterPath": "./.venv/bin/python",
+    "python.languageServer": "Pylance",
+    "autoDocstring.customTemplatePath": "dev/conf/others/autodoc.mustache",
 }
