--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,8 +42,8 @@ black = "^23.3.0"
 mypy = "^1.1.1"
 no-implicit-optional = "^1.3"
 ruff = "^0.11.0"
-pdoc = "^14.6.0"
 pytest = "^8.3.4"
+pdoc3 = "^0.11.5"
 
 [tool.mypy]
 disable_error_code = ["import", "attr-defined", "no-untyped-call"]
