--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,20 @@
-[tool.poetry]
-readme = "docs/README.md"
+[project]
 name = "alltheutils"
 license = "MIT"
 version = "2.2.0"
 description = "None"
-
-authors = [
-    "whinee",
+readme = "docs/README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "click>=8.1.3",
+    "pyyaml>=6.0",
+    "questionary>=1.10.0",
+    "tabulate>=0.9.0",
 ]
 maintainers = [
-    "whinee",
+    { name = "whinyaan", email = "whinyaan@disroot.org" },
 ]
-
-packages = [
-    { include = "alltheutils" }
-]
-
+keywords = ["utility"]
 classifiers=[
     "Intended Audience :: Developers",
     "Natural Language :: English",
@@ -23,32 +22,44 @@ classifiers=[
     "Programming Language :: Python :: 3",
     "Topic :: Utilities"
 ]
-keywords = ["utility"]
 
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+[project.urls]
+homepage = "https://python-poetry.org/"
+repository = "https://github.com/whinee/AllTheUtils"
+documentation = "https://github.com/whinee/AllTheUtils/tree/main/docs"
+"Bug Tracker" = "https://github.com/whinee/AllTheUtils/issues"
 
-[tool.poetry.dependencies]
-python = ">=3.10,<4"
 
-pyyaml = "^6.0"
+[dependency-groups]
+dev = [
+    "alltheutils>=2.2.0",
+    "black>=25.1.0",
+    "mypy>=1.15.0",
+    "no-implicit-optional>=1.4",
+    "pdoc3>=0.11.5",
+    "pytest>=8.3.4",
+    "rich>=13.9.4",
+    "ruamel-yaml>=0.18.10",
+    "ruff>=0.9.6",
+    "translate-toolkit>=3.15.2",
+]
 
-[tool.poetry.group.dev]
-optional = true
+[tool.setuptools]
+packages = ["alltheutils"]
 
-[tool.poetry.group.dev.dependencies]
-black = "^23.3.0"
-mypy = "^1.1.1"
-no-implicit-optional = "^1.3"
-ruff = "^0.11.0"
-pytest = "^8.3.4"
-pdoc3 = "^0.11.5"
+[tool.uv]
+default-groups = ["dev"]
+package = true
 
 [tool.mypy]
 disable_error_code = ["import", "attr-defined", "no-untyped-call"]
 
 [tool.ruff]
+line-length = 88
+
+target-version = "py311"
+
+[tool.ruff.lint]
 select = [
     "ANN",
     "B",
@@ -95,7 +106,6 @@ ignore = [
     "ANN001",
     "ANN002",
     "ANN003",
-    "ANN101",
     "ANN201",
     "ANN202",
     "ANN401",
@@ -148,12 +158,8 @@ exclude = [
     "venv",
 ]
 
-line-length = 88
-
-target-version = "py311"
-
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 max-complexity = 5
 
-[tool.ruff.pycodestyle]
+[tool.ruff.lint.pycodestyle]
 ignore-overlong-task-comments = false
