--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "docs/README.md"
 requires-python = ">=3.12"
 dependencies = [
     "click>=8.1.3",
+    "pydantic-yaml>=1.4.0",
     "pyyaml>=6.0",
     "questionary>=1.10.0",
     "tabulate>=0.9.0",
@@ -34,6 +35,7 @@ documentation = "https://github.com/whinee/AllTheUtils/tree/main/docs"
 dev = [
     "alltheutils>=2.2.0",
     "black>=25.1.0",
+    "erdantic>=1.1.0.post1",
     "mypy>=1.15.0",
     "no-implicit-optional>=1.4",
     "pdoc3>=0.11.5",
