--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,8 +47,8 @@ dev = [
     "translate-toolkit>=3.15.2",
 ]
 
-[tool.setuptools]
-packages = ["alltheutils"]
+[tool.setuptools.packages.find]
+include = ["alltheutils*", "alltheutils.cli*"]
 
 [tool.uv]
 default-groups = ["dev"]
