--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "alltheutils"
 license = "MIT"
-version = "2.3.0"
+version = "3.0.0"
 description = "None"
 readme = "docs/README.md"
 requires-python = ">=3.12"
@@ -10,6 +10,7 @@ dependencies = [
     "pyyaml>=6.0",
     "questionary>=1.10.0",
     "tabulate>=0.9.0",
+    "tomlkit>=0.13.2",
 ]
 maintainers = [
     { name = "whinyaan", email = "whinyaan@disroot.org" },
