--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,14 @@
 [project]
 name = "alltheutils"
 license = "MIT"
-version = "4.0.0"
+version = "4.1.0"
 description = "None"
 readme = "docs/README.md"
 requires-python = ">=3.12"
 dependencies = [
     "click>=8.1.3",
     "json5>=0.12.0",
+    "jsonnet>=0.21.0",
     "pyyaml>=6.0",
     "questionary>=1.10.0",
     "semver>=3.0.4",
